hamburger重複引入修改

--- a/html/articleAll.html
+++ b/html/articleAll.html
@@ -15,9 +15,6 @@
     <link rel="stylesheet" href="assets/css/css/footer.css">
     <link rel="stylesheet" href="assets/css/css/articleAll.css"> -->
     <link rel="stylesheet" href="assets/css/style.css">
-    <script src="https://kit.fontawesome.com/1a00250e22.js" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="js/header.js"></script>
 </head>
     @@include('layout/header.html')
     <section class="articleContent">
@@ -38,7 +35,7 @@
                         </section>
                         <section class="txt">
                             <h4 class="deepColor">這是一個背包</h4>
-                            <p class="lightColor">這是一個你買不起的背包，因為它是跟設計師聯名。</p>
+                            <p class="lightColor">這是一個你買不起的背包，因為它是跟設計師聯名。這是一個你買不起的背包，因為它是跟設計師聯名。這是一個你買不起的背包，因為它是跟設計師聯名。這是一個你買不起的背包，因為它是跟設計師聯名。這是一個你買不起的背包，因為它是跟設計師聯名。這是一個你買不起的背包，因為它是跟設計師聯名。這是一個你買不起的背包，因為它是跟設計師聯名。這是一個你買不起的背包，因為它是跟設計師聯名。</p>
                         </section>
                     </a>
                 </article>
