會員中心 修改 竣

--- a/html/3dSurroundView.html
+++ b/html/3dSurroundView.html
@@ -6,23 +6,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--共用-->
-    <link rel="stylesheet" href="css/cssReset.css">
-    <link rel="stylesheet" href="css/uiSet.css">
-    <link rel="stylesheet" href="css/component.css">
-    <link rel="stylesheet" href="css/buttonStyle.css">
+    <!-- <link rel="stylesheet" href="css/cssReset.css"> -->
+    <!-- <link rel="stylesheet" href="css/uiSet.css"> -->
+    <!-- <link rel="stylesheet" href="css/component.css"> -->
+    <!-- <link rel="stylesheet" href="css/buttonStyle.css"> -->
     <script src="https://kit.fontawesome.com/90d222f595.js" crossorigin="anonymous"></script>
     <!--燈箱-->
-    <link rel="stylesheet" href="css/accountManagement.css">
+    <!-- <link rel="stylesheet" href="css/accountManagement.css">
     <link rel="stylesheet" href="css/collect.css">
     <link rel="stylesheet" href="css/consumptionRecord.css">
     <link rel="stylesheet" href="css/customCharacter.css">
     <link rel="stylesheet" href="css/myListing.css">
-    <link rel="stylesheet" href="css/navButtonClick.css">
+    <link rel="stylesheet" href="css/navButtonClick.css"> -->
     <!--這頁的樣式-->
-    <link rel="stylesheet" href="css/3dSurroundView.css">
+    <!-- <link rel="stylesheet" href="css/3dSurroundView.css"> -->
     <!--按鈕通知-->
-    <link rel="stylesheet" href="css/notice.css">
+    <!-- <link rel="stylesheet" href="css/notice.css"> -->
     <!-- 3D套件 --->
+    <link rel="stylesheet" href="assets\css\style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pannellum@2.5.6/build/pannellum.css" />
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/pannellum@2.5.6/build/pannellum.js"></script>
 
@@ -271,18 +272,18 @@
                     </section>
                 </section>
                 <section class="clickPeople mask">
-                    <section class="img pictureChange"><img class="characterAdjustment" src="img/customCharacter/PowerPeople_Christopher001.png" alt="頭像"></section>
-                    <section class="img pictureChange"><img class="characterAdjustment" src="img/customCharacter/PowerPeople_Eric001.png" alt="頭像"></section>
-                    <section class="img pictureChange"><img class="characterAdjustment" src="img/customCharacter/PowerPeople_Liam001.png" alt="頭像"></section>
-                    <section class="img pictureChange"><img class="characterAdjustment" src="img/customCharacter/PowerPeople_Mark001.png" alt="頭像"></section>
-                    <section class="img pictureChange"><img class="characterAdjustment" src="img/customCharacter/PowerPeople_Owen001.png" alt="頭像"></section>
-                    <section class="img pictureChange"><img class="characterAdjustment" src="img/customCharacter/PowerPeople_Simon001.png" alt="頭像"></section>
-                    <section class="img pictureChange"><img class="characterAdjustment" src="img/customCharacter/PowerPeople_Emma001.png" alt="頭像"></section>
-                    <section class="img pictureChange"><img class="characterAdjustment" src="img/customCharacter/PowerPeople_Evelyn001.png" alt="頭像"></section>
-                    <section class="img pictureChange"><img class="characterAdjustment" src="img/customCharacter/PowerPeople_Jane001.png" alt="頭像"></section>
-                    <section class="img pictureChange"><img class="characterAdjustment" src="img/customCharacter/PowerPeople_Lilly001.png" alt="頭像"></section>
-                    <section class="img pictureChange"><img class="characterAdjustment" src="img/customCharacter/PowerPeople_Marilyn001.png" alt="頭像"></section>
-                    <section class="img pictureChange"><img class="characterAdjustment" src="img/customCharacter/PowerPeople_Melissa001.png" alt="頭像"></section>
+                    <section class="img pictureChange"><img class="characterAdjustment" src="assets/image/customCharacter/PowerPeople_Christopher001.png" alt="頭像"></section>
+                    <section class="img pictureChange"><img class="characterAdjustment" src="assets/image/customCharacter/PowerPeople_Eric001.png" alt="頭像"></section>
+                    <section class="img pictureChange"><img class="characterAdjustment" src="assets/image/customCharacter/PowerPeople_Liam001.png" alt="頭像"></section>
+                    <section class="img pictureChange"><img class="characterAdjustment" src="assets/image/customCharacter/PowerPeople_Mark001.png" alt="頭像"></section>
+                    <section class="img pictureChange"><img class="characterAdjustment" src="assets/image/customCharacter/PowerPeople_Owen001.png" alt="頭像"></section>
+                    <section class="img pictureChange"><img class="characterAdjustment" src="assets/image/customCharacter/PowerPeople_Simon001.png" alt="頭像"></section>
+                    <section class="img pictureChange"><img class="characterAdjustment" src="assets/image/customCharacter/PowerPeople_Emma001.png" alt="頭像"></section>
+                    <section class="img pictureChange"><img class="characterAdjustment" src="assets/image/customCharacter/PowerPeople_Evelyn001.png" alt="頭像"></section>
+                    <section class="img pictureChange"><img class="characterAdjustment" src="assets/image/customCharacter/PowerPeople_Jane001.png" alt="頭像"></section>
+                    <section class="img pictureChange"><img class="characterAdjustment" src="assets/image/customCharacter/PowerPeople_Lilly001.png" alt="頭像"></section>
+                    <section class="img pictureChange"><img class="characterAdjustment" src="assets/image/customCharacter/PowerPeople_Marilyn001.png" alt="頭像"></section>
+                    <section class="img pictureChange"><img class="characterAdjustment" src="assets/image/customCharacter/PowerPeople_Melissa001.png" alt="頭像"></section>
                 </section>
             </section>
         </main>
