--- a/html/customCharacter.html
+++ b/html/customCharacter.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/cssReset.css">
+    <!-- <link rel="stylesheet" href="css/cssReset.css">
     <link rel="stylesheet" href="css/component.css">
-    <link rel="stylesheet" href="css/customCharacter.css">
+    <link rel="stylesheet" href="css/customCharacter.css"> -->
+    <link rel="stylesheet" href="assets\css\style.css">
     <script src="https://kit.fontawesome.com/90d222f595.js" crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
