--- a/html/homePage.html
+++ b/html/homePage.html
@@ -16,7 +16,7 @@
     <script src="js/header.js"></script>
 </head>
 <body>   
-    <!-- @@include('layout/headerNormal.html') -->
+    @@include('layout/headerNormal.html')
     <section class="homeIntro">
         <div class="intro">
             <section class="pic">
