--- a/articlePage.html
+++ b/articlePage.html
@@ -117,7 +117,6 @@
                         <section class="txt">
                             <h3 class="deepColor">h3 第一個標題</h3>
                             <h4 class="deepColor">h4 第二個標題</h4>
-                            <p class="deepColor small">p small這篇文章在講甚麼？</p>
                             <p class="deepColor">這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？</p>
                         </section>
                     </article>
@@ -168,7 +167,7 @@
                         </section>
                         <section class="txt">
                             <h4>h4下面的文章</h4>
-                            <p>p這篇文章在講甚麼？</p>
+                            <p class="deepColor small">p small這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？</p>
                         </section>
                     </section>
                     <section class="item">
@@ -177,7 +176,7 @@
                         </section>
                         <section class="txt">
                             <h4>h4下面的文章</h4>
-                            <p>p這篇文章在講甚麼？</p>
+                            <p class="deepColor small">p small這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？</p>
                         </section>
                     </section>
                     <section class="item">
@@ -185,8 +184,8 @@
                             <img src="https://picsum.photos/90/90/?random=10">
                         </section>
                         <section class="txt">
-                            <h4>h3下面的文章</h4>
-                            <p>p這篇文章在講甚麼？</p>
+                            <h4>h4下面的文章</h4>
+                            <p class="deepColor small">p small這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？</p>
                         </section>
                     </section>
                 </section>
@@ -236,6 +235,9 @@
                     </section>
                 </section>
             </aside>
+        </section>
+        <section class="comment">
+            
         </section>
     </section>
     
