--- a/html/articlePage.html
+++ b/html/articlePage.html
@@ -46,7 +46,6 @@
                         <section class="txt">
                             <h3 class="deepColor">h3 第一個標題</h3>
                             <h4 class="deepColor">h4 第二個標題</h4>
-                            <p class="deepColor small">p small這篇文章在講甚麼？</p>
                             <p class="deepColor">這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？</p>
                         </section>
                     </article>
@@ -97,7 +96,7 @@
                         </section>
                         <section class="txt">
                             <h4>h4下面的文章</h4>
-                            <p>p這篇文章在講甚麼？</p>
+                            <p class="deepColor small">p small這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？</p>
                         </section>
                     </section>
                     <section class="item">
@@ -106,7 +105,7 @@
                         </section>
                         <section class="txt">
                             <h4>h4下面的文章</h4>
-                            <p>p這篇文章在講甚麼？</p>
+                            <p class="deepColor small">p small這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？</p>
                         </section>
                     </section>
                     <section class="item">
@@ -114,8 +113,8 @@
                             <img src="https://picsum.photos/90/90/?random=10">
                         </section>
                         <section class="txt">
-                            <h4>h3下面的文章</h4>
-                            <p>p這篇文章在講甚麼？</p>
+                            <h4>h4下面的文章</h4>
+                            <p class="deepColor small">p small這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？</p>
                         </section>
                     </section>
                 </section>
@@ -165,6 +164,9 @@
                     </section>
                 </section>
             </aside>
+        </section>
+        <section class="comment">
+            
         </section>
     </section>
     @@include('layout/footer.html')
