--- a/html/listing.html
+++ b/html/listing.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -22,6 +23,7 @@
         p{font-size: 16px;font-family: Arial,sans-serif;} */
     </style>
 </head>
+
 <body>
 
     <section>
@@ -68,21 +70,21 @@
         <label for="tab1" class="tag epBColor">上架競標藝術品</label>
         <!-- 上架競拍顯示 -->
         <form action="listing1.html" class="content aidBgColor" name="page1" method="post">
-                <h4>上架資訊:</h4>
-                <div class="artTitle">
-                    <label for="">
+            <h4>上架資訊:</h4>
+            <div class="artTitle">
+                <label for="">
                         <h5>藝術品名</h5>
                     </label>
-                    <input type="text" class="textBox" id="" name="artName" value="" placeholder="請輸入" required>
-                </div>
-                <div class="artist">
-                    <label for="">
+                <input type="text" class="textBox" id="" name="artName" value="" placeholder="請輸入" required>
+            </div>
+            <div class="artist">
+                <label for="">
                         <h5>藝術品創作者</h5>
                         <input type="text" class="textBox" id="" name="artistName" value="" placeholder="請輸入" required>
                     </label>
-                </div>
-                <div class="bidTime">
-                    <label for="">
+            </div>
+            <div class="bidTime">
+                <label for="">
                         <h5>競標時間</h5>
                         <select name="time" class="aidBgColor" required>
                             <option value="">請選擇</option>
@@ -95,7 +97,7 @@
                             <option value="7">30天</option>
                         </select>
                     </label>
-                </div>
+            </div>
             <div class="startPrice">
                 <label for="">
                     <h5>起標價</h5>
@@ -201,24 +203,25 @@
             </div>
             <div class="uploadCertification">
                 <h4>藝術證明:</h4>
-                    <div class="certification">
-                        <input type="file" id="paper" name="paper" required>
-                        <label for="paper"><img src="pic/add_icon.png" alt="none"></label>
-                    </div>
+                <div class="certification">
+                    <input type="file" id="paper" name="paper" required>
+                    <label for="paper"><img src="pic/add_icon.png" alt="none"></label>
+                </div>
             </div>
             <!-- <form action="ckeditor.php"> -->
-                <div class="productIntro">
-                        <h4>商品介紹(商品描述):</h4>
-                        <textarea name="productIntro" id="productIntro" cols="80" rows="10" name="goods" required></textarea>
-                </div>
-                <div class="sellerIntro">
-                        <h4>賣家介紹(自我推薦):</h4>
-                        <textarea name="sellerIntro" id="sellerIntro" cols="80" rows="10" name="sellerIntro" required></textarea>
-                </div>
+            <div class="productIntro">
+                <h4>商品介紹(商品描述):</h4>
+                <textarea name="productIntro" id="productIntro" cols="80" rows="10" name="goods" required></textarea>
+            </div>
+            <div class="sellerIntro">
+                <h4>賣家介紹(自我推薦):</h4>
+                <textarea name="sellerIntro" id="sellerIntro" cols="80" rows="10" name="sellerIntro" required></textarea>
+            </div>
             <!-- </form> -->
             <section class="btn">
                 <input type="button" class="btnProduct mainBgColor" value="預覽畫面" id="btnProduct">
-                <input type="submit" class="btnProduct epFBgColor" value="確認送出(審核)" onclick="check()"> <!--onclick="location.href='listing.html'"-->
+                <input type="submit" class="btnProduct epFBgColor" value="確認送出(審核)" onclick="check()">
+                <!--onclick="location.href='listing.html'"-->
             </section>
         </form>
         <!--<script type="text/javascript">
@@ -294,19 +297,19 @@
             </div>
             <div class="uploadCertification">
                 <h4>藝術證明:</h4>
-                    <div class="certification">
-                        <input type="file" id="paper" name="paper" required>
-                        <label for="paper"><img src="pic/add_icon.png" alt="none"></label>
-                    </div>
+                <div class="certification">
+                    <input type="file" id="paper" name="paper" required>
+                    <label for="paper"><img src="pic/add_icon.png" alt="none"></label>
+                </div>
             </div>
             <!-- <form action="ckeditor.php"> -->
             <div class="productIntro">
-                    <h4>商品介紹(商品描述):</h4>
-                    <textarea name="productIntro1" id="productIntro1" cols="80" rows="10" name="goods" required></textarea>
+                <h4>商品介紹(商品描述):</h4>
+                <textarea name="productIntro1" id="productIntro1" cols="80" rows="10" name="goods" required></textarea>
             </div>
             <div class="sellerIntro">
-                    <h4>賣家介紹(自我推薦):</h4>
-                    <textarea name="sellerIntro1" id="sellerIntro1" cols="80" rows="10" name="sellerIntro" required></textarea>
+                <h4>賣家介紹(自我推薦):</h4>
+                <textarea name="sellerIntro1" id="sellerIntro1" cols="80" rows="10" name="sellerIntro" required></textarea>
             </div>
             <!-- </form> -->
             <section class="btn">
@@ -376,24 +379,25 @@
 
 
     <!-- <div id="app"> -->
-        <!-- <h1>{{message}}</h1> 印出下方message變數的資料 -->
-        <!-- <h2>{{score*0.8}}</h2> -->
-        <!-- <input type="text" v-model="message"> v-model(雙向綁定)要告訴"綁定下方vue的哪裡" -->
+    <!-- <h1>{{message}}</h1> 印出下方message變數的資料 -->
+    <!-- <h2>{{score*0.8}}</h2> -->
+    <!-- <input type="text" v-model="message"> v-model(雙向綁定)要告訴"綁定下方vue的哪裡" -->
     <!-- </div> -->
     <!-- <div id="app2"></div> -->
 
     <!-- <script> -->
-        <!-- // new Vue({ -->
-            <!-- // el:'#app', -->
-            <!-- // data: { -->
-                <!-- // message: 'Hello', //變數 -->
-                <!-- // score: 100, -->
-            <!-- // }, -->
-            <!-- //屬性el:,data:，屬性值:''字串,{}物件, -->
-        <!-- // }); -->
+    <!-- // new Vue({ -->
+    <!-- // el:'#app', -->
+    <!-- // data: { -->
+    <!-- // message: 'Hello', //變數 -->
+    <!-- // score: 100, -->
+    <!-- // }, -->
+    <!-- //屬性el:,data:，屬性值:''字串,{}物件, -->
+    <!-- // }); -->
     <!-- // </script> -->
 
 
     <script src="https://cdn.jsdelivr.net/npm/vue"></script>
 </body>
+
 </html>
