--- a/html/articlePage.html
+++ b/html/articlePage.html
@@ -20,149 +20,156 @@
     @@include('layout/header.html')
     <section class="articlePageContent">
         <section class="articlePageWrap">
-            <section class="pageContent">
-                <section class="breadcrumb">
+            <div class="pageContent">
+                <div class="breadcrumb">
                     <ul>
                         <li><a href="" class="lightColor">首頁></a></li>
                         <li ><a href="" class="lightColor">藝論></a></li>
                         <li><a href="" class="epBColor">這篇文章</a></li>
                     </ul>
-                </section>
-                <section class="authorShortIntro">
-                    <section class="pic">
-                        <img src="https://picsum.photos/90/90/?random=10">
-                    </section>
-                    <section class="txt">
-                        <h4 class="deepColor">h4JERRY</h4>
-                        <p class="lightColor small">Feb 6 .2021</p>
-                    </section>
-                </section>
+                </div>
+                <div class="authorShortIntro">
+                    <div class="item">
+                        <div class="pic">
+                            <img src="https://picsum.photos/90/90/?random=10">
+                        </div>
+                        <div class="txt">
+                            <h4 class="deepColor">h4JERRY</h4>
+                            <p class="lightColor small">Feb 6 .2021</p>
+                        </div>
+                    </div>
+                    <div class="report">
+                        <div class="pic">
+                            <img src="assets/image/articlePage_authorShortIntro_exclamation.png">
+                        </div>
+                    </div>
+                </div>
                 <article class="page">
                     <h2 class="deepColor"> h2一篇測試用的文章</h2>
                     <article class="item PicTxtItem">
-                        <section class="pic">
+                        <div class="pic">
                             <img src="https://picsum.photos/500/400/?random=10">
-                        </section>
-                        <section class="txt">
+                        </div>
+                        <div class="txt">
                             <h3 class="deepColor">h3 第一個標題</h3>
                             <h4 class="deepColor">h4 第二個標題</h4>
                             <p class="deepColor">這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？</p>
-                        </section>
+                        </div>
                     </article>
                     <article class="item TxtItem">
-                        <section class="txt">
+                        <div class="txt">
                             <p class="deepColor">這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？</p>
                             <p class="deepColor">這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？</p>
-                        </section>
+                        </div>
                     </article>
                     <article class="item TxtItem">
-                        <section class="txt">
+                        <div class="txt">
                             <p class="deepColor">這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？</p>
-                        </section>
+                        </div>
                     </article>
-                    <section class="shareBar">
-                        <section class="pic">
+                    <div class="shareBar">
+                        <div class="pic">
                             <img src="assets/image/articlePage_shareBar_comment.png">
-                        </section>
-                        <section class="socialMedia">
-                            <section class="pic">
+                        </div>
+                        <div class="socialMedia">
+                            <div class="pic">
                                 <a href="">
                                     <img src="assets/image/home_footer_facebook.png">
                                 </a>
-                            </section>
-                            <section class="pic">
+                            </div>
+                            <div class="pic">
                                 <a href="">
                                     <img src="assets/image/home_footer_instagram.png">
                                 </a>
-                            </section>
-                            <section class="pic">
+                            </div>
+                            <div class="pic">
                                 <a href="">
                                     <img src="assets/image/home_footer_twitter.png">
                                 </a>
-                            </section>
-                            <section class="pic">
+                            </div>
+                            <div class="pic">
                                 <a href="">
                                     <img src="assets/image/home_footer_line.png">
                                 </a>
-                            </section>
-                        </section>
-                    </section>
+                            </div>
+                        </div>
+                    </div>
                 </article>
                 <section class="relative">
                     <h2>h2相關文章</h2>
-                    <section class="item">
-                        <section class="pic">
+                    <div class="item">
+                        <div class="pic">
                             <img src="https://picsum.photos/90/90/?random=10">
-                        </section>
-                        <section class="txt">
+                        </div>
+                        <div class="txt">
                             <h4>h4下面的文章</h4>
                             <p class="deepColor small">p small這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？</p>
-                        </section>
-                    </section>
-                    <section class="item">
-                        <section class="pic">
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="pic">
                             <img src="https://picsum.photos/90/90/?random=10">
-                        </section>
-                        <section class="txt">
+                        </div>
+                        <div class="txt">
                             <h4>h4下面的文章</h4>
                             <p class="deepColor small">p small這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？</p>
-                        </section>
-                    </section>
-                    <section class="item">
-                        <section class="pic">
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="pic">
                             <img src="https://picsum.photos/90/90/?random=10">
-                        </section>
-                        <section class="txt">
+                        </div>
+                        <div class="txt">
                             <h4>h4下面的文章</h4>
                             <p class="deepColor small">p small這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？</p>
-                        </section>
-                    </section>
+                        </div>
+                    </div>
                 </section>
-            </section>            
+            </div>            
             <aside class="sideInfo">
-                <section class="authorIntro">
-                    <section class="pic">
+                <div class="authorIntro">
+                    <div class="pic">
                         <img src="https://picsum.photos/200/200/?random=10">
-                    </section>
-                    <section class="txt">
+                    </div>
+                    <div class="txt">
                         <p>p JERRY</p>
                         <p class="lightColor small">p small 我是誰？皮卡丘。分享關於神奇寶貝的最新資訊，皮卡皮卡啾~
                         </p>
-                    </section>
-                </section>
-                <section class="relativeSide">
+                    </div>
+                </div>
+                <div class="relativeSide">
                     <h4>h4我的文章</h4>
-                    <section class="item">
+                    <div class="item">
                         <a href="">
-                        <section class="pic">
+                        <div class="pic">
                             <img src="https://picsum.photos/300/300/?random=10">
-                        </section>
-                        <section class="txt">
+                        </div>
+                        <div class="txt">
                             <p class="lightColor  small">p small 側邊的文章在講甚麼？側邊的文章在講甚麼？側邊的文章在講甚麼？</p>
-                        </section>
+                        </div>
                         </a>
-                    </section>
-                    <section class="item">
+                    </div>
+                    <div class="item">
                         <a href="">
-                            <section class="pic">
+                            <div class="pic">
                                 <img src="https://picsum.photos/300/300/?random=10">
-                            </section>
-                            <section class="txt">
+                            </div>
+                            <div class="txt">
                                 <p class="lightColor  small">p small 側邊的文章在講甚麼？側邊的文章在講甚麼？側邊的文章在講甚麼？</p>
-                            </section>
+                            </div>
                         </a>
-                    </section>
-                    <section class="item">
+                    </div>
+                    <div class="item">
                         <a href="">
-                            <section class="pic">
+                            <div class="pic">
                                 <img src="https://picsum.photos/300/300/?random=10">
-                            </section>
-                            <section class="txt">
+                            </div>
+                            <div class="txt">
                                 <p class="lightColor  small">p small 側邊的文章在講甚麼？側邊的文章在講甚麼？側邊的文章在講甚麼？</p>
-                            </section>
+                            </div>
                         </a>
-                    </section>
-                </section>
+                    </div>
+                </div>
             </aside>
         </section>
         <section class="comment">
