--- a/html/homePage.html
+++ b/html/homePage.html
@@ -9,11 +9,11 @@
 	<!-- <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/uiSet.css">
     <link rel="stylesheet" href="assets/css/style.css"> -->
-    <link rel="stylesheet" href="assets/css/headerNormal.css">
+    <!-- <link rel="stylesheet" href="assets/css/headerNormal.css"> -->
     <!-- <link rel="stylesheet" href="assets/css/footer.css"> -->
 </head>
 <body>   
-    <!-- @@include('layout/headerNormal.html') -->
+    @@include('layout/headerNormal.html')
     <section class="homeIntro">
         <div class="intro">
             <section class="pic">
