--- a/html/articlePage.html
+++ b/html/articlePage.html
@@ -64,8 +64,13 @@
                         </div>
                     </article>
                     <div class="shareBar">
-                        <div class="pic">
-                            <img src="assets/image/articlePage_shareBar_comment.png">
+                        <div class="shareComment">
+                            <div class="pic">
+                                <img src="assets/image/articlePage_shareBar_comment.png">
+                            </div>
+                            <div class="pic">
+                                <img src="assets/image/articlePage_shareBar_comment.png">
+                            </div>
                         </div>
                         <div class="socialMedia">
                             <div class="pic">
