--- a/html/login.html
+++ b/html/login.html
@@ -4,9 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="assets/css/reset.css">
-    <link rel="stylesheet" href="assets/css/uiSet.css">
+    <title>Login In</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
@@ -34,12 +32,12 @@
             <!-- 切換按鈕區 -->
             <article class="aidBgColor">
                 <article>
-                    <img src="assets/imges/logo-1-01.png" alt="">
+                    <img src="assets/imges/all_logo.png" alt="">
                     <label for="changeBtn" class="roundOutline ">註冊</label>
                     <!-- <button>註冊</button> -->
                 </article>
                 <article>
-                    <img src="assets/imges/logo-1-01.png" alt="">
+                    <img src="assets/imges/all_logo.png" alt="">
                     <label for="changeBtn" class="roundOutline ">登入</label>
                     <!-- <button>登入</button> -->
                 </article>
