--- a/html/about.html
+++ b/html/about.html
@@ -160,16 +160,13 @@
                         <p>致力於提供各式創作藝術者一個展示作品的環境，建構享受潮流藝術的視覺饗宴，提倡藝術潮流的鑑賞；期待在藝術與收益之中取得平衡，媒合消費者與創作者，打造安全、安心、透明的交易平台，並持續推廣藝術創作。</p>
                     </div>
                 </div>
-                <div class="page pageCover">
-
-                </div>
+                <div class="page pageCover"></div>
             </div>
         </section>
     </main>
 
     <!-- 關於我們_頁尾區域 -->
     @@include('layout/footer.html')
-
 
     <!-- Jquery.js -->
     <script src="js/jquery/jquery.js"></script>
