--- a/html/articlePage.html
+++ b/html/articlePage.html
@@ -47,12 +47,10 @@
                             <img src="https://picsum.photos/500/400/?random=10">
                         </div>
                         <div class="txt">
-                            <h3 class="deepColor">h3 第一個標題</h3>
-                            <h4 class="deepColor">h4 第二個標題</h4>
                             <p class="deepColor">這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？</p>
                         </div>
                     </article>
-                    <article class="item TxtItem">
+                    <!-- <article class="item TxtItem">
                         <div class="txt">
                             <p class="deepColor">這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？</p>
                             <p class="deepColor">這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？</p>
@@ -62,11 +60,14 @@
                         <div class="txt">
                             <p class="deepColor">這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？</p>
                         </div>
-                    </article>
+                    </article> -->
                     <div class="shareBar">
                         <div class="shareComment">
-                            <div class="pic">
-                                <img src="assets/image/articlePage_shareBar_comment.png">
+                            <div class="like">
+                                <div class="pic">
+                                    <img src="assets/image/articlePage_shareBar_like.png">
+                                </div>
+                                <span>999</span>
                             </div>
                             <div class="pic">
                                 <img src="assets/image/articlePage_shareBar_comment.png">
