--- a/html/articlePost.html
+++ b/html/articlePost.html
@@ -9,10 +9,9 @@
 </head>
 <body>
     @@include('layout/headerNormal.html')
+    <section class="articlePostContent">
 
-
-
-
+    </section>
     @@include('layout/footer.html')
 </body>
 </html>
