--- a/html/login.html
+++ b/html/login.html
@@ -10,10 +10,10 @@
 <body>
     @@include('layout/header.html')
     <!-- 登入註冊區 -->
-    <section class="loginArea aidBgColor">
+    <section class="loginArea ">
         <!-- 切換顯示用input display:none -->
-        <input type="checkbox" id="changeBtn">
-        <article class="size">
+        <input type="checkbox" id="changeBtn" class="">
+        <article class="size aidBgColor">
             <!-- 輸入區 -->
             <article>
                 <form action="#" >
@@ -30,14 +30,14 @@
                 </form>  
             </article>
             <!-- 切換按鈕區 -->
-            <article class="aidBgColor">
+            <article class="epFBgColor">
                 <article>
-                    <img src="assets/imges/all_logo.png" alt="">
+                    <img src="assets\image\all_logo.png" alt="">
                     <label for="changeBtn" class="roundOutline ">註冊</label>
                     <!-- <button>註冊</button> -->
                 </article>
                 <article>
-                    <img src="assets/imges/all_logo.png" alt="">
+                    <img src="assets\image\all_logo.png" alt="">
                     <label for="changeBtn" class="roundOutline ">登入</label>
                     <!-- <button>登入</button> -->
                 </article>
