藝廊入口+關於我們 頁面修改

--- a/html/galleryDoor.html
+++ b/html/galleryDoor.html
@@ -5,22 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>galleryDoor</title>
-    <!-- css reset -->
-    <link rel="stylesheet" href="../assets/css/reset.css">
-    <!-- OwlCarousel -->
-    <link rel="stylesheet" href="../assets/css/owl/owl.carousel.min.css">
-    <link rel="stylesheet" href="../assets/css/owl/owl.theme.default.min.css">
-    <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css">
-    <!-- 共用css -->
-    <link rel="stylesheet" href="../assets/css/uiSet.css">
-    <link rel="stylesheet" href="../assets/css/headerNormal.css">
     <!-- galleryDoor.css -->
-    <link rel="stylesheet" href="../assets/css/galleryDoor.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
     <!-- 關於我們_頁首區域 -->
-    <!-- @@include('layout/header.html'); -->
+    @@include('layout/header.html')
 
     <!-- 伶_藝廊大門_main區域 -->
     <main>
