about+galleryDoor 修改

--- a/html/galleryDoor.html
+++ b/html/galleryDoor.html
@@ -13,9 +13,9 @@
     @@include('layout/header.html')
 
     <!-- 伶_藝廊大門_main區域 -->
-    <main>
+    <main class="galleryDoorMain">
         <div class="stage">
-            <div class="container">
+            <div class="size">
                 <div class="ring">
                     <div class="img">
                         <img src="https://picsum.photos/id/1/600/800" alt="">
