--- a/html/about.html
+++ b/html/about.html
@@ -19,7 +19,7 @@
     
 
     <!-- 伶_關於我們_main區域 -->
-    <main>
+    <main class="aboutMain">
         <!-- 伶_關於我們_書架區_RWD -->
         <section class="container introduceCardWrap">
             <div class="owl-carousel owl-theme">
