--- a/html/articlePage.html
+++ b/html/articlePage.html
@@ -42,14 +42,14 @@
                 </div>
                 <article class="page">
                     <h2 class="deepColor"> h2一篇測試用的文章</h2>
-                    <article class="item PicTxtItem">
+                    <div class="item PicTxtItem">
                         <div class="pic">
                             <img src="https://picsum.photos/500/400/?random=10">
                         </div>
                         <div class="txt">
                             <p class="deepColor">這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？</p>
                         </div>
-                    </article>
+                    </div>
                     <!-- <article class="item TxtItem">
                         <div class="txt">
                             <p class="deepColor">這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？</p>
